Update at end of Thursday

--- a/git-lesson/index.html
+++ b/git-lesson/index.html
@@ -14,6 +14,9 @@
         <li>git commit -m "Commit message" <em>commits changes to memory</em></li>
         <li>git status <em>shows status of repository</em></li>
         <li>git log <em>shows the commit history</em></li>
+        <li>git remote -v <em>checks if there is a remote connection</em></li>
+        <li>git remote add origin (paste in HTTPS from "new repository" on gitHub) <em>creates a new connection between gitHub and local repository</em></li>
+        <li>git push origin master <em>pushes from computer repository to gitHub</em></li>
     </ul>
 </body>
 </html>
