Updating notes after end of week 2 lectures

--- a/week1/git-lesson/index.html
+++ b/week1/git-lesson/index.html
@@ -17,6 +17,7 @@
         <li>git remote -v <em>checks if there is a remote connection</em></li>
         <li>git remote add origin (paste in HTTPS from "new repository" on gitHub) <em>creates a new connection between gitHub and local repository</em></li>
         <li>git push origin master <em>pushes from computer repository to gitHub</em></li>
+        <li>git clone [paste in SSH link from code button in github repository] <em>copies down a repository from gitHub</em></li>
     </ul>
 </body>
 </html>
